# stable-worldmodel

./: .buildinfo  .codespellrc  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile.pyflyt  README.md  dinowm-reprod.py  docker-compose.yml  environment.json  environment_v1.json  environment_v10.json  environment_v11.json  environment_v2.json  environment_v3.json  environment_v4.json  environment_v5.json  environment_v6.json  environment_v7.json  environment_v8.json  environment_v9.json  example.py  genindex.html  index.html  mkdocs.yaml  modules.html  objects.inv  pusht_converter.py  pusht_dataset.py  py-modindex.html  pyproject.toml  pytest.ini  requirements_frozen.txt  requirements_frozen_v11.txt  run_ablations.sh  search.html  searchindex.js  setup.py  stable_worldmodel.envs.html  stable_worldmodel.html  (+3 more)
.doctrees/: environment.pickle  index.doctree  modules.doctree  stable_worldmodel.data.doctree  stable_worldmodel.doctree  stable_worldmodel.envs.doctree  stable_worldmodel.envs.ogbench_manip.doctree  stable_worldmodel.envs.pusht.doctree  stable_worldmodel.envs.rocket_landing.doctree  stable_worldmodel.envs.simple_nav.doctree  stable_worldmodel.envs.two_room.doctree  stable_worldmodel.solver.doctree  stable_worldmodel.wm.doctree
.doctrees/api/: data.doctree  policy.doctree  solver.doctree  spaces.doctree  world.doctree  wrappers.doctree
.doctrees/introduction/: contributing.doctree  dinowm.doctree  quickstart.doctree  showcase.doctree
.doctrees/tutorials/: dinowm.doctree  new-world.doctree
.doctrees/world/: pusht.doctree  simple-pointmaze.doctree  two_room.doctree  voidrun.doctree
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: build-sphinx-doc.yml  testing.yaml  tests.yaml
__MACOSX/outputs/: ._pusht
_modules/: index.html
_modules/stable_worldmodel/: cli.html  data.html  policy.html  spaces.html  utils.html  world.html  wrappers.html
_static/: documentation_options.js
api/data/: index.html
api/policy/: index.html
api/solver/: index.html
api/spaces/: index.html
api/world/: index.html
api/wrappers/: index.html
debugging/: check_range.py
docs/: baseline.md  baselines.md  basic_usage.md  index.md  quick_start.md
docs/api/: dataset.md  policy.md  solver.md  spaces.md  world.md  wrapper.md
examples/: example_dryrun.py  example_eval.py  example_financial.py  example_ogb_antmaze.py  example_ogbench.py  example_potion_lab.py  example_pusht.py  example_pyro_pusht.py  example_record.py  example_reprod.py  example_robocasa.py  example_rocketlanding.py  example_rocketlanding_moving_pad.py  play_pusht_physics.py  play_pusht_physics_gui.py  record_video.py
genindex/: index.html
modules/: index.html
py-modindex/: index.html
scripts/: convert_robocasa_hdf5.py  mae_training.py  train_predictor.py
search/: index.html
stable_worldmodel/: __about__.py  __init__.py  cli.py  data.py  index.html  policy.py  spaces.py  utils.py  world.py  wrapper.py  wrappers.py
stable_worldmodel.data/: index.html
stable_worldmodel.envs/: index.html
stable_worldmodel.envs.ogbench_manip/: index.html
stable_worldmodel.envs.pusht/: index.html
stable_worldmodel.envs.rocket_landing/: index.html
stable_worldmodel.envs.simple_nav/: index.html
stable_worldmodel.envs.two_room/: index.html
stable_worldmodel.solver/: index.html
stable_worldmodel.wm/: index.html
tests/: test_cem_planner.py  test_data.py  test_gd_planner.py  test_policy.py  test_simple_point.py  test_spaces.py  test_wrappers.py
xenoworlds/: __init__.py  agent.py  collect.py  data.py  evaluator.py  free_electron.py  point_maze.py  policy.py  predictor.py  simple_minigrid.py  solver.py  utils.py  world.py  wrappers.py
(+389 files in other folders)
