[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "stable-worldmodel"
description = "Stable Library for evaluate and conduct world model research"
authors = []
license = {text = "MIT"}
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    # Core dependencies - minimal required for basic SSL training
    "torch",
    "torchvision",
    "torchmetrics",
    "lightning",
    "hydra-core",
    "loguru",
    "tabulate",
    "gymnasium[all]",
    "minari",
    "stable-pretraining",
    "nevergrad",
    "einops",
    "datasets",
]

dynamic = ["version"]

[project.scripts]
stable-worldmodel = "stable_worldmodel.cli:app"
swm = "stable_worldmodel.cli:app"

[tool.setuptools]
packages = ["stable_worldmodel"]

[tool.setuptools.dynamic]
version = {attr = "stable_worldmodel.__about__.__version__"}

[dependency-groups]

# Development tools
dev = [
    "pytest",
    "coverage",
    "pytest-cov",
    "codecov",
    "pre-commit",
    "ruff",
]

# Documentation tools
doc = [
    "sphinx",
    "sphinx-gallery",
    "sphinx-book-theme",
    "sphinxcontrib-bibtex",
    "matplotlib",
    "memory_profiler",
    "myst-parser",
]


[tool.pytest.ini_options]
pythonpath = "stable_worldmodel"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "D"]
ignore = ["D100", "D102", "D103", "D104", "D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
